# ros-devcontainer

./: .gitignore  Dockerfile  cycloneConfig_PC.xml  entrypoint.sh
.devcontainer/: Dockerfile  Dockerfile.jetson  Dockerfile.l4t_r32  dev-Package.Dockerfile  devcontainer.json  docker-compose.jetson.yml  docker-compose.yml  docker-compose_deploy.yml
_archive/: cycloneConfig_Pi.xml  jetson.Dockerfile
_tmp/: humble.Dockerfile
_xpadKernel/: ReadMe.txt  config-wsl
dev_ws/install/: local_setup.sh  setup.sh
dev_ws/install/cv_cam/lib/cv_cam/: cam_executable
dev_ws/install/cv_cam/share/cv_cam/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
dev_ws/install/first_package/share/first_package/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
dev_ws/install/my_bot/share/my_bot/: local_setup.bash  local_setup.sh  (+4 more)
dev_ws/log/: latest_build
dev_ws/src/cv_cam/: package.xml  setup.py
dev_ws/src/cv_cam/cv_cam/: camera_node.py
dev_ws/src/first_package/: CMakeLists.txt  package.xml
dev_ws/src/my_bot/: CMakeLists.txt  package.xml
dev_ws/src/my_bot/config/: joy.yaml
dev_ws/src/my_bot/description/: camera.xacro  gazebo_control.xacro  materials.xacro  my_bot.urdf.xacro  robot_core.xacro
dev_ws/src/my_bot/launch/: joy.launch.py  rsp.launch.py  sim.launch.py
dev_ws/src/my_bot/my_bot/: pytest.py
dev_ws/src/my_package/: CMakeLists.txt  package.xml
dev_ws/src/my_robot_controller/: setup.py
dev_ws/src/my_robot_controller/my_robot_controller/: draw_circle.py  my_first_node.py  pose_subscriber.py
(+47 files in other folders)
